Update getNextPegoutWithEnoughConfirmations to receive BridgeConstants object